# DSI-Cohort8-ML-2

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.md
.github/workflows/: validate-contributor.yml
app/: README.md  main.py
data/processed/: test.parquet  train.parquet  val.parquet
data/raw/: synthetic_customers.csv
docs/: model_visuals.md  pipeline-flow.html  setup.md
experiments/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_comparison.ipynb  04_shap_analysis.ipynb  05_pipeline_visualization.ipynb  CFO_Business_ROI_Intelligence_Report.ipynb  ML_Project_Technical_QA_Evaluation.ipynb  full_analysis.ipynb  production_pipeline_bm.ipynb  shap_analysis.ipynb
models/: lightgbm.joblib  lightgbm.pkl  linear_svc.joblib  logistic_regression.joblib  logistic_regression.pkl  models_manifest.json  svm.pkl  threshold.json  voting_ensemble.joblib  voting_ensemble.pkl  xgboost.joblib  xgboost.pkl
models/production/: logistic_regression.joblib  threshold.json  xgboost.joblib  xgboost.pkl
notebooks/: production_pipeline_bm.ipynb
reports/figures/: pipeline_structure.html
reports/metrics/: comparison.csv  comparison.json  feature_count_sweep.csv  recall_analysis.csv  shap_importance.json  tuning_comparison.csv
scripts/: README.md  run_pipeline.py  setup_env.py
src/: README.md  clean.py  evaluate.py  features.py  ingest.py  split.py  synthetic_data.py  train.py
tests/: README.md  conftest.py  test_clean.py  test_evaluate.py  test_features.py  test_schemas.py  test_train.py
