[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-marketing-ml"
version = "1.0.0"
description = "Predicting term deposit subscription using UCI Bank Marketing dataset"
requires-python = ">=3.12,<3.14"
readme = "README.md"

dependencies = [
  # ── Core data ──────────────────────────────────────────────────────────────
  "pandas>=2.0,<3",
  "numpy==2.4.2",
  "scipy==1.17.1",

  # ── ML ─────────────────────────────────────────────────────────────────────
  "scikit-learn==1.8.0",
  "xgboost==3.2.0",
  "optuna==4.7.0",
  "joblib==1.5.3",
  "shap==0.50.0",

  # ── Experiment tracking ────────────────────────────────────────────────────
  "mlflow==3.10.0",

  # ── Dashboard ─────────────────────────────────────────────────────────────
  "streamlit==1.54.0",

  # ── Visualisation (notebooks) ─────────────────────────────────────────────
  "matplotlib==3.10.8",
  "seaborn==0.13.2",

  # ── Excel I/O ─────────────────────────────────────────────────────────────
  "et-xmlfile==2.0.0",
  "openpyxl==3.1.5",
]

[project.optional-dependencies]
# Install dev extras with:  uv pip install -e ".[dev]"
dev = [
  # Testing
  "pytest==9.0.2",
  "pytest-cov==7.0.0",
  # Linting / type checking
  "ruff==0.15.4",
  "mypy==1.19.1",
  # Notebooks
  "jupyter==1.1.1",
  "jupyterlab==4.5.5",
  "ipykernel==6.25.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
pythonpath = ["."]